--- a/about.html
+++ b/about.html
@@ -33,7 +33,8 @@
 	<link rel="stylesheet" href="assets/plugins/parallax-slider/css/parallax-slider.css">
 	<link rel="stylesheet" href="assets/plugins/fancybox/source/jquery.fancybox.css">
 	<link rel="stylesheet" href="assets/plugins/animated-headline/css/animated-headline.css">
-
+	<link rel="stylesheet" href="assets/plugins/cube-portfolio/cubeportfolio/css/cubeportfolio.min.css">
+	<link rel="stylesheet" href="assets/plugins/cube-portfolio/cubeportfolio/custom/custom-cubeportfolio.css">
 
 	<!-- CSS Theme -->
 	<link rel="stylesheet" href="assets/css/theme-colors/dark-red.css" id="style_color">
@@ -440,72 +441,132 @@ I look forward to seeing each one of you.</p><br><p>Chandni Khadka,<br>
 		</div>
 		<!--=== End Parallax Counter ===-->
 		
-		<!--=== Content Part ===-->
-		<div class="container content-sm">
-			<div class="row">
-<div class="col-sm-12">
-			<h2 class="title-v2 title-center">Academic Schools</h2>
-			<div class="row">
-				<div class="col-md-4">
-					<div class="">
-						<a href="arts-humanities.html" title="Arts and Humanities"><img class="img-responsive" src="assets/img/main/Arts.jpg" alt="" /></a>
-						<div class="">
-							<h4>Arts & Humanities</h4>
-							<!-- future link to website school <a href="portfolio_old_item.html" class="info">Read More</a>-->
+		<!--=== Cube-Portfdlio ===-->
+		<div class="cube-portfolio container margin-bottom-60">
+			<div class="content-xs margin-bottom-30">
+				<h2 class="title-v2 title-center">Academic Schools</h2>
+				<p class="space-lg-hor">Through our six undergraduate academic schools JSU’s mission is to provide distinctive educational, cultural and social experiences for a diverse student population.</p><p class="space-lg-hor">As a learning-centered university, Jacksonville State University strives to challenge students academically in a responsive environment, meeting students' educational, career and personal goals while seeking to produce broadly-educated graduates that are prepared for global engagement.</p>
+			</div>
+			
+			<div id="grid-container" class="cbp-l-grid-agency">
+				<div class="cbp-item graphic">
+					<div class="cbp-caption margin-bottom-20">
+						<div class="cbp-caption-defaultWrap">
+							<img src="assets/img/schools/thumbnail/arts-humanities.jpg" alt="">
+						</div>
+						<div class="cbp-caption-activeWrap">
+							<div class="cbp-l-caption-alignCenter">
+								<div class="cbp-l-caption-body">
+									<ul class="link-captions no-bottom-space">
+										<li><a href="arts-humanities.html"><i class="rounded-x fa fa-link"></i></a></li>
+									</ul>
+								</div>
+							</div>
 						</div>
 					</div>
-				</div>
-				<div class="col-md-4">
-					<div class="">
-						<img class="img-responsive" src="assets/img/main/Business.jpg" alt="" />
-						<div class="mask">
-							<h4>Business & Industry</h4>
-							<!-- future link to website school <a href="portfolio_old_item.html" class="info">Read More</a>-->
-						</div>
+					<div class="cbp-title-dark">
+						<div class="cbp-l-grid-agency-title"><a href="arts-humanities.html">Arts & Humanities</a></div>
 					</div>
 				</div>
-				<div class="col-md-4">
-					<div class="">
-						<img class="img-responsive" src="assets/img/main/Education.jpg" alt="" />
-						<div class="mask">
-							<h4>Education</h4>
-							<!-- future link to website school <a href="portfolio_old_item.html" class="info">Read More</a>-->
+				<div class="cbp-item web-design logos">
+					<div class="cbp-caption margin-bottom-20">
+						<div class="cbp-caption-defaultWrap">
+							<img src="assets/img/schools/thumbnail/business.jpg" alt="">
+						</div>
+						<div class="cbp-caption-activeWrap">
+							<div class="cbp-l-caption-alignCenter">
+								<div class="cbp-l-caption-body">
+									<ul class="link-captions no-bottom-space">
+										<li><a href="business.html"><i class="rounded-x fa fa-link"></i></a></li>
+									</ul>
+								</div>
+							</div>
 						</div>
 					</div>
-				</div>
-			</div><!--/row-->
-
-			<div class="row">
-				<div class="col-md-4">
-					<div class="">
-						<img class="img-responsive" src="assets/img/main/Science.jpg" alt="" />
-						<div class="mask">
-							<h4>Science</h4>
-							<!-- future link to website school <a href="portfolio_old_item.html" class="info">Read More</a>-->
-						</div>
+					<div class="cbp-title-dark">
+						<div class="cbp-l-grid-agency-title"><a href="business.html">Business & Industry</a></div>
 					</div>
 				</div>
-				<div class="col-md-4">
-					<div class="">
-						<img class="img-responsive" src="assets/img/main/Human.jpg" alt="" />
-						<div class="mask">
-							<h4>Human Services & Social Sciences</h4>
-							<!-- future link to website school <a href="portfolio_old_item.html" class="info">Read More</a>-->
+				<div class="cbp-item graphic logos">
+					<div class="cbp-caption margin-bottom-20">
+						<div class="cbp-caption-defaultWrap">
+							<img src="assets/img/schools/thumbnail/education.jpg" alt="">
+						</div>
+						<div class="cbp-caption-activeWrap">
+							<div class="cbp-l-caption-alignCenter">
+								<div class="cbp-l-caption-body">
+									<ul class="link-captions no-bottom-space">
+										<li><a href="education.html"><i class="rounded-x fa fa-link"></i></a></li>
+									</ul>
+								</div>
+							</div>
 						</div>
 					</div>
-				</div>
-				<div class="col-md-4">
-					<div class="">
-						<img class="img-responsive" src="assets/img/main/Health.jpg" alt="" />
-						<div class="mask">
-							<h4>Health Professions & Wellness</h4>
-							<!-- future link to website school <a href="portfolio_old_item.html" class="info">Read More</a>-->
-						</div>
+					<div class="cbp-title-dark">
+						<div class="cbp-l-grid-agency-title"><a href="education.html">Education</a></div>
 					</div>
 				</div>
-			</div><!--/row-->
-				</div></div></div>
-				<!--/container-->
+				<div class="cbp-item web-design graphic">
+					<div class="cbp-caption margin-bottom-20">
+						<div class="cbp-caption-defaultWrap">
+							<img src="assets/img/schools/thumbnail/health.jpg" alt="">
+						</div>
+						<div class="cbp-caption-activeWrap">
+							<div class="cbp-l-caption-alignCenter">
+								<div class="cbp-l-caption-body">
+									<ul class="link-captions no-bottom-space">
+										<li><a href="health.html"><i class="rounded-x fa fa-link"></i></a></li>
+									</ul>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="cbp-title-dark">
+						<div class="cbp-l-grid-agency-title"><a href="health.html">Health</a></div>
+					</div>
+				</div>
+				<div class="cbp-item identity web-design">
+					<div class="cbp-caption margin-bottom-20">
+						<div class="cbp-caption-defaultWrap">
+							<img src="assets/img/schools/thumbnail/human-services.jpg" alt="">
+						</div>
+						<div class="cbp-caption-activeWrap">
+							<div class="cbp-l-caption-alignCenter">
+								<div class="cbp-l-caption-body">
+									<ul class="link-captions no-bottom-space">
+										<li><a href="human-services.html"><i class="rounded-x fa fa-link"></i></a></li>
+									</ul>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="cbp-title-dark">
+						<div class="cbp-l-grid-agency-title"><a href="human-services.html">Human Services</a></div>
+					</div>
+				</div>
+				<div class="cbp-item identity web-design">
+					<div class="cbp-caption margin-bottom-20">
+						<div class="cbp-caption-defaultWrap">
+							<img src="assets/img/schools/thumbnail/science.jpg" alt="">
+						</div>
+						<div class="cbp-caption-activeWrap">
+							<div class="cbp-l-caption-alignCenter">
+								<div class="cbp-l-caption-body">
+									<ul class="link-captions no-bottom-space">
+										<li><a href="science.html"><i class="rounded-x fa fa-link"></i></a></li>
+									</ul>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="cbp-title-dark">
+						<div class="cbp-l-grid-agency-title"><a href="science.html">Science</a></div>
+					</div>
+				</div>
+			</div><!--/end Grid Container-->
+		</div>
+		<!--=== End Cube-Portfdlio ===-->
+		
 		<!--=== News Block ===-->
 		<div class="bg-grey">
 			<div class="container content-sm">
@@ -677,8 +738,8 @@ I look forward to seeing each one of you.</p><br><p>Chandni Khadka,<br>
 
 							<!-- Social Icons -->
 							<ul class="social-icon-list margin-bottom-20">
+								<li><a href="https://www.facebook.com/JSUInternationalPrograms/"><i class="rounded-x fa fa-facebook"></i></a></li>
 								<li><a href="#"><i class="rounded-x fa fa-twitter"></i></a></li>
-								<li><a href="#"><i class="rounded-x fa fa-facebook"></i></a></li>
 								<li><a href="https://www.instagram.com/jsu_international_programs/" target="_blank" title="Instagram social media"><i class="rounded-x fa fa-instagram"></i></a></li>
 							</ul>
 							<!-- End Social Icons -->
@@ -710,9 +771,11 @@ I look forward to seeing each one of you.</p><br><p>Chandni Khadka,<br>
 <script src="assets/plugins/fancybox/source/jquery.fancybox.pack.js"></script>
 <script src="assets/plugins/animated-headline/js/modernizr.js"></script>
 <script src="assets/plugins/animated-headline/js/animated-headline.js"></script>
+<script type="text/javascript" src="assets/plugins/cube-portfolio/cubeportfolio/js/jquery.cubeportfolio.min.js"></script>
 	<!-- JS Customization -->
 <script type="text/javascript" src="assets/js/custom.js"></script>
 	<!-- JS Page Level -->
+<script type="text/javascript" src="assets/js/plugins/cube-portfolio/cube-portfolio-3.js"></script>
 <script type="text/javascript" src="assets/js/app.js"></script>
 <script src="assets/js/plugins/fancy-box.js"></script>
 <script src="assets/js/plugins/owl-carousel.js"></script>
