--- a/ihop.html
+++ b/ihop.html
@@ -33,7 +33,8 @@
 	<link rel="stylesheet" href="assets/plugins/parallax-slider/css/parallax-slider.css">
 	<link rel="stylesheet" href="assets/plugins/fancybox/source/jquery.fancybox.css">
 	<link rel="stylesheet" href="assets/plugins/animated-headline/css/animated-headline.css">
-
+	<link rel="stylesheet" href="assets/plugins/cube-portfolio/cubeportfolio/css/cubeportfolio.min.css">
+	<link rel="stylesheet" href="assets/plugins/cube-portfolio/cubeportfolio/custom/custom-cubeportfolio.css">
 
 	<!-- CSS Theme -->
 	<link rel="stylesheet" href="assets/css/theme-colors/dark-red.css" id="style_color">
@@ -539,8 +540,8 @@ Pertinent information concerning the International House Program:</p>
 
 							<!-- Social Icons -->
 							<ul class="social-icon-list margin-bottom-20">
+								<li><a href="https://www.facebook.com/JSUInternationalPrograms/"><i class="rounded-x fa fa-facebook"></i></a></li>
 								<li><a href="#"><i class="rounded-x fa fa-twitter"></i></a></li>
-								<li><a href="#"><i class="rounded-x fa fa-facebook"></i></a></li>
 								<li><a href="https://www.instagram.com/jsu_international_programs/" target="_blank" title="Instagram social media"><i class="rounded-x fa fa-instagram"></i></a></li>
 							</ul>
 							<!-- End Social Icons -->
@@ -572,9 +573,11 @@ Pertinent information concerning the International House Program:</p>
 <script src="assets/plugins/fancybox/source/jquery.fancybox.pack.js"></script>
 <script src="assets/plugins/animated-headline/js/modernizr.js"></script>
 <script src="assets/plugins/animated-headline/js/animated-headline.js"></script>
+<script type="text/javascript" src="assets/plugins/cube-portfolio/cubeportfolio/js/jquery.cubeportfolio.min.js"></script>
 	<!-- JS Customization -->
 <script type="text/javascript" src="assets/js/custom.js"></script>
 	<!-- JS Page Level -->
+<script type="text/javascript" src="assets/js/plugins/cube-portfolio/cube-portfolio-3.js"></script>
 <script type="text/javascript" src="assets/js/app.js"></script>
 <script src="assets/js/plugins/fancy-box.js"></script>
 <script src="assets/js/plugins/owl-carousel.js"></script>
