--- a/undergraduate.html
+++ b/undergraduate.html
@@ -696,7 +696,10 @@ Transferring at least 24 academic credit   hours from accredited US institutions
 <script type="text/javascript" src="assets/plugins/smoothScroll.js"></script>
 <script type="text/javascript" src="assets/plugins/modernizr.js"></script>
 <script src="assets/plugins/owl-carousel/owl-carousel/owl.carousel.js"></script>
-<script src="assets/plugins/login-signup-modal-window/js/main.js"></script> <!-- Gem jQuery -->
+<script src="assets/plugins/login-signup-modal-window/js/main.js"></script>
+<script type="text/javascript" src="assets/plugins/counter/waypoints.min.js"></script>
+<script type="text/javascript" src="assets/plugins/counter/jquery.counterup.min.js"></script>
+		<!-- Gem jQuery -->
 <script src="assets/plugins/jquery.parallax.js"></script>
 <script src="assets/plugins/fancybox/source/jquery.fancybox.pack.js"></script>
 <script src="assets/plugins/animated-headline/js/modernizr.js"></script>
@@ -712,13 +715,13 @@ Transferring at least 24 academic credit   hours from accredited US institutions
 <script type="text/javascript" src="assets/js/plugins/style-switcher.js"></script>
 <script type="text/javascript">
 		jQuery(document).ready(function() {
-			App.init();
+			App.initCounter();
 			StyleSwitcher.initStyleSwitcher();
 			App.initParallaxBg();
 			FancyBox.initFancybox();
 			OwlCarousel.initOwlCarousel();
 		});
-	</script>
+</script>
 	<!--[if lt IE 9]>
 	<script src="assets/plugins/respond.js"></script>
 	<script src="assets/plugins/html5shiv.js"></script>
