--- a/about.html
+++ b/about.html
@@ -782,13 +782,10 @@ I look forward to seeing each one of you.</p><br><p>Chandni Khadka,<br>
 <script type="text/javascript" src="assets/js/plugins/style-switcher.js"></script>
 <script type="text/javascript">
 		jQuery(document).ready(function() {
-			App.init();
-			StyleSwitcher.initStyleSwitcher();
-			App.initParallaxBg();
-			FancyBox.initFancybox();
-			OwlCarousel.initOwlCarousel();
+			App.initCounter();
+			
 		});
-	</script>
+</script>
 	<!--[if lt IE 9]>
 	<script src="assets/plugins/respond.js"></script>
 	<script src="assets/plugins/html5shiv.js"></script>
