--- a/about.html
+++ b/about.html
@@ -766,7 +766,10 @@ I look forward to seeing each one of you.</p><br><p>Chandni Khadka,<br>
 <script type="text/javascript" src="assets/plugins/smoothScroll.js"></script>
 <script type="text/javascript" src="assets/plugins/modernizr.js"></script>
 <script src="assets/plugins/owl-carousel/owl-carousel/owl.carousel.js"></script>
-<script src="assets/plugins/login-signup-modal-window/js/main.js"></script> <!-- Gem jQuery -->
+<script src="assets/plugins/login-signup-modal-window/js/main.js"></script>
+<script type="text/javascript" src="assets/plugins/counter/waypoints.min.js"></script>
+<script type="text/javascript" src="assets/plugins/counter/jquery.counterup.min.js"></script>
+		<!-- Gem jQuery -->
 <script src="assets/plugins/jquery.parallax.js"></script>
 <script src="assets/plugins/fancybox/source/jquery.fancybox.pack.js"></script>
 <script src="assets/plugins/animated-headline/js/modernizr.js"></script>
@@ -783,7 +786,10 @@ I look forward to seeing each one of you.</p><br><p>Chandni Khadka,<br>
 <script type="text/javascript">
 		jQuery(document).ready(function() {
 			App.initCounter();
-			
+			StyleSwitcher.initStyleSwitcher();
+			App.initParallaxBg();
+			FancyBox.initFancybox();
+			OwlCarousel.initOwlCarousel();
 		});
 </script>
 	<!--[if lt IE 9]>
