Update changes on ihop
Replace old pictures

--- a/ihop.html
+++ b/ihop.html
@@ -327,7 +327,7 @@
 Pertinent information concerning the International House Program:</p>
 						<p>
 					<ul class="list-unstyled">
-						<li>1. Out-of State Tuition waiver means student will be paying tuition at In-State tuition rate.</li>
+						<li>1. Tuition discount.</li>
 						<li>2. The Scholarship recipient will need funds for transportation to the United States and for the return trip to his/her native country.</li>
 						<li>3. Students are responsible for their personal, social expenses and for expenses that are not covered by the scholarship.</li>
 						<li>4. With very few exceptions, international students cannot work. There is very little work on campus for international students, so funds for personal expenses will be necessary.</li>
