Update information on general

--- a/about.html
+++ b/about.html
@@ -567,6 +567,34 @@ I look forward to seeing each one of you.</p><br><p>Chandni Khadka,<br>
 		</div>
 		<!--=== End Cube-Portfdlio ===-->
 		
+		<!--=== Accreditation ===-->
+		
+		<!--=== Service Blcoks ===-->
+		<div class="container content-sm">
+
+			<!-- Service Blcoks -->
+			<div class="row service-box-v1 margin-bottom-40">
+				<div class="col-md-6 col-sm-6 md-margin-bottom-40">
+					<div class="service-block service-block-default no-margin-bottom">
+						<i class="icon-lg rounded-x icon icon-badge"></i>
+						<h2 class="heading-sm">Accreditation</h2>
+						<p class="">JSU is accredited by the Southern Association of Colleges and Schools Commission on Colleges to award bachelor’s, master’s, educational specialist, and doctoral degrees <br />  <a target="_blank" href="http://www.jsu.edu/accreditation.html">Learn more.</a></p>
+					</div>
+				</div>
+				<div class="col-md-6 col-sm-6">
+					<div class="service-block service-block-default no-margin-bottom">
+						<i class="icon-lg rounded-x icon-line icon-graduation"></i>
+						<h2 class="heading-md">After Graduation</h2>
+						<p>Students at JSU are able to participate in many career fairs and professional preparedness for you to apply for the different job opportunities with help from of <br /><a href="http://www.jsu.edu/careerservices/index.html" target="new" title="JSU Career Services">Learn More.</a></p> 
+					</div>
+				</div>
+			</div>
+			<!-- End Service Blcoks -->
+		</div>
+		<!--=== End Service Blcoks ===-->
+		
+		<!--=== End of Accreditation ===-->
+		
 		<!--=== News Block ===-->
 		<div class="bg-grey">
 			<div class="container content-sm">
