--- a/business.html
+++ b/business.html
@@ -435,7 +435,7 @@
 
 							<!-- Social Icons -->
 							<ul class="social-icon-list margin-bottom-20">
-								<li><a href="https://www.facebook.com/JSUInternationalPrograms/"><i class="rounded-x fa fa-facebook"></i></a></li>
+								<li><a href="https://www.facebook.com/JSUInternationalPrograms/" target="_blank"><i class="rounded-x fa fa-facebook"></i></a></li>
 								<li><a href="#"><i class="rounded-x fa fa-twitter"></i></a></li>
 								<li><a href="https://www.instagram.com/jsu_international_programs/" target="_blank" title="Instagram social media"><i class="rounded-x fa fa-instagram"></i></a></li>
 							</ul>
@@ -447,7 +447,7 @@
 			<footer class="copyright">
 				<div class="container">
 					<ul class="list-inline terms-menu">
-						<li>Last Review on February, 2017</li>
+						<li>Last Review on June, 2017</li>
 						<li>Made with <em class="fa fa-heart"></em><a href="http://www.jsu.edu/interactive/"> at JSU Interactive</a></li>
 					</ul>
 				</div>
