Update changes on the school

--- a/arts-humanities.html
+++ b/arts-humanities.html
@@ -324,8 +324,8 @@
 						<div class="headline-left margin-bottom-40">
 					<h2 class="headline-brd">School of Arts & Humanities</h2>
 				</div><!--/end Headline Left-->
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In porta ipsum vel mi gravida mattis. Ut sit amet laoreet diam. Fusce iaculis sollicitudin purus, in tristique urna. Suspendisse potenti. Fusce non sem efficitur leo fermentum porttitor ut vitae orci. Aliquam erat volutpat.</p><br>
-						<p>Sed consectetur blandit ornare. Etiam at ante est. Nunc sed luctus ipsum, eu tincidunt justo. Sed id venenatis tellus. Mauris a cursus dolor. Maecenas sed magna non est interdum sollicitudin eget vitae ex. Ut eget lacus lorem.</p>
+						<p>With 5 departments, the School provides general studies in over 8 majors and a wide variety of minors in the arts and humanities. The School is the intellectual center of Jacksonville State University, helping all students build the foundation for their future studies.</p>
+						<p>To enable students to achieve their greatest potential, the School emphasizes excellence in teaching in every department, with dynamic and caring faculty whose fine work in the classroom is bolstered by research, scholarship, artistic creation, and service activities. Through the work of its faculty and students, the School of Arts and Humanities enhances the cultural, intellectual, and social life of Jacksonville State University, the local community, and Northeast Alabama.</p>
 						<h3>Academic Departments</h3>
 							<div class="row">
 								<div class="col-sm-5">
