--- a/business.html
+++ b/business.html
@@ -324,8 +324,7 @@
 						<div class="headline-left margin-bottom-40">
 					<h2 class="headline-brd">School of Business & Industry</h2>
 				</div><!--/end Headline Left-->
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In porta ipsum vel mi gravida mattis. Ut sit amet laoreet diam. Fusce iaculis sollicitudin purus, in tristique urna. Suspendisse potenti. Fusce non sem efficitur leo fermentum porttitor ut vitae orci. Aliquam erat volutpat.</p><br>
-						<p>Sed consectetur blandit ornare. Etiam at ante est. Nunc sed luctus ipsum, eu tincidunt justo. Sed id venenatis tellus. Mauris a cursus dolor. Maecenas sed magna non est interdum sollicitudin eget vitae ex. Ut eget lacus lorem.</p>
+						<p>The School of Business & Industry aspires to be one of the premier public regional undergraduate schools of business in the Southeast. The faculty, staff, and administration of the School are committed to continuously improving the quality of our academic programs, our student support activities, and our service to the local and regional community.</p>
 						<h3>Academic Departments</h3>
 							<div class="row">
 								<div class="col-sm-5">
