--- a/education.html
+++ b/education.html
@@ -324,8 +324,7 @@
 						<div class="headline-left margin-bottom-40">
 					<h2 class="headline-brd">School of Education</h2>
 				</div><!--/end Headline Left-->
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In porta ipsum vel mi gravida mattis. Ut sit amet laoreet diam. Fusce iaculis sollicitudin purus, in tristique urna. Suspendisse potenti. Fusce non sem efficitur leo fermentum porttitor ut vitae orci. Aliquam erat volutpat.</p><br>
-						<p>Sed consectetur blandit ornare. Etiam at ante est. Nunc sed luctus ipsum, eu tincidunt justo. Sed id venenatis tellus. Mauris a cursus dolor. Maecenas sed magna non est interdum sollicitudin eget vitae ex. Ut eget lacus lorem.</p>
+						<p>The JSU School of Education proudly serves the citizens of northeast Alabama, the southeast, and the nation through our traditional and online programs of study. Teachers and other school personnel prepared at the baccalaureate, master's, and educational specialist levels develop an extensive knowledge and skill based education appropriate for the level of certification. Developing initial and advanced education candidates into effective, reflective, creative decision makers is the fundamental goal of all teacher preparation programs at JSU. Each degree program is designed to provide a strong knowledge and skill base that will help to ensure a successful future.</p>
 						<h3>Academic Departments</h3>
 							<div class="row">
 								<div class="col-sm-5">
