--- a/health.html
+++ b/health.html
@@ -324,8 +324,7 @@
 						<div class="headline-left margin-bottom-40">
 					<h2 class="headline-brd">School of Health Professions & Wellness</h2>
 				</div><!--/end Headline Left-->
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In porta ipsum vel mi gravida mattis. Ut sit amet laoreet diam. Fusce iaculis sollicitudin purus, in tristique urna. Suspendisse potenti. Fusce non sem efficitur leo fermentum porttitor ut vitae orci. Aliquam erat volutpat.</p><br>
-						<p>Sed consectetur blandit ornare. Etiam at ante est. Nunc sed luctus ipsum, eu tincidunt justo. Sed id venenatis tellus. Mauris a cursus dolor. Maecenas sed magna non est interdum sollicitudin eget vitae ex. Ut eget lacus lorem.</p>
+						<p>The Jacksonville State University School of Health Professions and Wellness was established to deliver a top-quality education for 21st century professionals in an effort to promote health and wellness in our communities, state, nation, and around the world.  The departments of nursing, respiratory therapy, and kinesiology have developed undergraduate and graduate programs utilizing the latest evidence-based practices.  It is our goal to prepare future leaders in health and wellness professions.</p>
 						<h3>Academic Departments</h3>
 							<div class="row">
 								<div class="col-sm-5">
