--- a/human-services.html
+++ b/human-services.html
@@ -324,8 +324,9 @@
 						<div class="headline-left margin-bottom-40">
 					<h2 class="headline-brd">School of Human Services & Social Sciences</h2>
 				</div><!--/end Headline Left-->
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In porta ipsum vel mi gravida mattis. Ut sit amet laoreet diam. Fusce iaculis sollicitudin purus, in tristique urna. Suspendisse potenti. Fusce non sem efficitur leo fermentum porttitor ut vitae orci. Aliquam erat volutpat.</p><br>
-						<p>Sed consectetur blandit ornare. Etiam at ante est. Nunc sed luctus ipsum, eu tincidunt justo. Sed id venenatis tellus. Mauris a cursus dolor. Maecenas sed magna non est interdum sollicitudin eget vitae ex. Ut eget lacus lorem.</p>
+						<p>The School of Human Services and Social Sciences offers quality academic programs through traditional, hybrid, and online course offerings.  We proudly serve the central Alabama region, as well as, students from all over the world who want an excellent and affordable education.  Our school offers professional degree programs for immediate careers at the baccalaureate, master&rsquo;s, and doctoral level and preparation for success in graduate school.</p>
+						<p>Our faculty and staff seek to serve students in a manner that leads to transformative educational and interpersonal experiences.  Students work with accomplished faculty who are engaged in innovative forms of teaching, scholarship, and service.  Our goal is to provide students with opportunities and experiences that lead to life-long personal and professional success.</p>
+						<p>Graduates are prepared for work in criminal justice and forensics, emergency management and disaster preparedness, politics and public administration, psychology, sociology, social work, military and veteran services.  </p>
 						<h3>Academic Departments</h3>
 							<div class="row">
 								<div class="col-sm-5">
