--- a/science.html
+++ b/science.html
@@ -324,8 +324,7 @@
 						<div class="headline-left margin-bottom-40">
 					<h2 class="headline-brd">School of Science</h2>
 				</div><!--/end Headline Left-->
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In porta ipsum vel mi gravida mattis. Ut sit amet laoreet diam. Fusce iaculis sollicitudin purus, in tristique urna. Suspendisse potenti. Fusce non sem efficitur leo fermentum porttitor ut vitae orci. Aliquam erat volutpat.</p><br>
-						<p>Sed consectetur blandit ornare. Etiam at ante est. Nunc sed luctus ipsum, eu tincidunt justo. Sed id venenatis tellus. Mauris a cursus dolor. Maecenas sed magna non est interdum sollicitudin eget vitae ex. Ut eget lacus lorem.</p>
+						<p>Committed to Discovery. The School of Science at JSU offers a distinctive environment for investigation, learning, and discovery. In the classroom, laboratory, and field, our staff and faculty cultivate an atmosphere of inquiry. Alongside our students, we grapple with the big questions about our universe from a scientific perspective. With programs of study in three academic departments, we prepare undergraduate and graduate students to join the grand enterprise of discovery we call Science.</p>
 						<h3>Academic Departments</h3>
 							<div class="row">
 								<div class="col-sm-5">
